--- a/index.css
+++ b/index.css
@@ -1,28 +1,24 @@
+
 .navbar-collapse {
-    background-color: #343A40; /* или другой нужный вам цвет */
+    background-color: #343A40;
+    min-height: 56px;
 }
 
 .navbar{
-    padding-top: 0px;
+    padding: 0px;
 }
 
 .container-fluid{
     background-color: #343A40;
-    height: 56px;
-    padding: 0px 0px 0px 0px;
+    padding: 0px;
+    min-height: 56px;
 }
+
+
+
 
 .navbar-brand{
     padding-left: 16px;
-}
-
-body.bd-example {
-    padding-left: 0;
-    padding-right: 0;
-}
-
-
-.navbar-brand{
     color: white;
 }
 
@@ -33,7 +29,6 @@ body.bd-example {
 .navbar-brand:active{
     color: white;
 }
-
 
 .nav-link{
     padding-left: 16px;
@@ -50,10 +45,23 @@ body.bd-example {
 
 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(213, 208, 208, 0.479)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
-  }
-  
+}
+
 .navbar-toggler{
     height: 38px;
     width: 54px;
     border-color: rgba(232, 228, 228, 0.479);
+}
+
+.my-custom-btn {
+    width: 201px;
+    height: 48px;
+  }
+
+
+.title-profile{
+    margin-top: 60px;
+}
+.btn{
+    margin-bottom: 60px;
 }
